# ITKSphinxExamples

./: .fleek.json  .gersemi.config  .gitattributes  .gitignore  .gitmodules  .hooks-config.bash  .lychee.toml  .mailmap  .pre-commit-config.yaml  CMakeLists.txt  CTestConfig.cmake  ITKRepositoryImport.todo  ITKWikiExamplesRepositoryImport.todo  NOTICE  README.md  README.rst  azure-pipelines.yml  azure_dashboard.cmake  index.md  index.rst  itk-module.cmake  itkexamples_common.cmake  jenkins_dashboard.cmake  readme.rst  requirements.txt
Utilities/CookieCutter/{{cookiecutter.example_name}}/: CMakeLists.txt  Code.cxx  Code.py  Documentation.md  Documentation.rst
src/: CMakeLists.txt  Credits.rst  Credits.rst.in  ITKExamplesMacro.cmake  ImageCompareCommand.cxx  build.rst  conf.py  contribute.rst  download.rst  index.md  index.rst
src/Bridge/: CMakeLists.txt  index.md  index.rst
src/Bridge/NumPy/: CMakeLists.txt  index.md  index.rst
src/Bridge/VtkGlue/: CMakeLists.txt  index.md  index.rst
src/Compatibility/: CMakeLists.txt  index.rst
src/Compatibility/Deprecated/: CMakeLists.txt  index.rst
src/Contribute/: APIKey.png.md5  ContributeWithGit.rst  DashboardSubmission.rst  MigrateToFolder.png.md5  PeerReviewWithGerrit.rst  UploadBinaryData.rst  UploadHere.png.md5  contribute_with_git.rst  contribute_with_web_interface.rst  dashboard_submission.rst  index.rst  peer_review_with_gerrit.rst  write_a_new_example.rst
src/Core/: CMakeLists.txt  index.md  index.rst
src/Core/Common/: CMakeLists.txt  index.md  index.rst
src/Core/ImageAdaptors/: CMakeLists.txt  index.md  index.rst
src/Core/ImageFunction/: CMakeLists.txt  index.md  index.rst
src/Core/Mesh/: CMakeLists.txt  index.md  index.rst
src/Core/QuadEdgeMesh/: CMakeLists.txt  index.md  index.rst
src/Core/SpatialObjects/: CMakeLists.txt  index.md  index.rst
src/Core/TestKernel/: CMakeLists.txt  index.md  index.rst
src/Core/Transform/: CMakeLists.txt  index.md  index.rst
src/Developer/: ConceptChecking.cxx  Exceptions.cxx  ImageFilter.cxx  ImageFilter.h  ImageFilter.hxx  ImageFilterMultipleInputs.cxx  ImageFilterMultipleInputsDifferentType.cxx  ImageFilterMultipleInputsDifferentType.h  ImageFilterMultipleInputsDifferentType.hxx  ImageFilterMultipleOutputs.cxx  ImageFilterMultipleOutputs.h  ImageFilterMultipleOutputs.hxx  ImageFilterMultipleOutputsDifferentType.cxx  ImageFilterMultipleOutputsDifferentType.h  ImageFilterMultipleOutputsDifferentType.hxx  ImageFilterX.h  ImageFilterX.hxx  ImageFilterY.h  ImageFilterY.hxx  ImageSource.h  ImageSource.hxx  InplaceImageFilter.cxx  MiniPipeline.cxx  MultiThreadedImageFilter.cxx  MultiThreadedImageFilter.h  MultiThreadedImageFilter.hxx  MyInPlaceImageFilter.h  MyInPlaceImageFilter.hxx  OilPaintingImageFilter.cxx  SetGetMacro.cxx  itkImageFilterMultipleInputs.h  itkImageFilterMultipleInputs.hxx  itkOilPaintingImageFilter.h  itkOilPaintingImageFilter.hxx
src/Download/: index.rst  index.rst.in
src/Examples/: CMakeLists.txt  ImageCompare.cxx  ImageCompareCommand.cxx  index.rst
src/Examples/Bridge/: index.rst
src/Examples/Compatibility/: index.rst
src/Examples/Core/: CMakeLists.txt  index.rst
src/Examples/Filtering/: CMakeLists.txt  index.rst
src/Examples/GPU/: index.rst
src/Examples/IO/: CMakeLists.txt  index.rst
src/Examples/Nonunit/: index.rst
src/Examples/Numerics/: CMakeLists.txt  index.rst
src/Examples/Registration/: index.rst
src/Examples/Segmentation/: index.rst
src/Examples/Video/: CMakeLists.txt  index.rst
src/Filtering/: CMakeLists.txt  index.md  index.rst
src/Filtering/AnisotropicSmoothing/: CMakeLists.txt  index.md  index.rst
src/Filtering/AntiAlias/: CMakeLists.txt  index.md  index.rst
src/Filtering/BinaryMathematicalMorphology/: CMakeLists.txt  index.md  index.rst
src/Filtering/Colormap/: CMakeLists.txt  index.md  index.rst
src/Filtering/Convolution/: CMakeLists.txt  index.md  index.rst
src/Filtering/CurvatureFlow/: CMakeLists.txt  index.md  index.rst
src/Filtering/DistanceMap/: CMakeLists.txt  index.md  index.rst
src/Filtering/FFT/: CMakeLists.txt  index.md  index.rst
src/Filtering/FastMarching/: CMakeLists.txt  index.md  index.rst
src/Filtering/ImageCompare/: CMakeLists.txt  index.md  index.rst
src/Filtering/ImageCompose/: CMakeLists.txt  index.md  index.rst
src/Filtering/ImageFeature/: CMakeLists.txt  index.md  index.rst
src/Filtering/ImageFilterBase/: CMakeLists.txt  index.md  index.rst
src/Filtering/ImageFusion/: CMakeLists.txt  index.md  index.rst
src/Filtering/ImageGradient/: CMakeLists.txt  index.md  index.rst
src/Filtering/ImageGrid/: CMakeLists.txt  index.md  index.rst
src/Filtering/ImageIntensity/: CMakeLists.txt  index.md  index.rst
src/Filtering/ImageLabel/: CMakeLists.txt  index.md  index.rst
src/Filtering/ImageStatistics/: CMakeLists.txt  index.md  index.rst
src/Filtering/LabelMap/: CMakeLists.txt  index.md  index.rst
src/Filtering/MathematicalMorphology/: CMakeLists.txt  index.md  index.rst
src/Filtering/Path/: CMakeLists.txt  index.md  index.rst
src/Filtering/QuadEdgeMeshFiltering/: CMakeLists.txt  index.md  index.rst
src/Filtering/Smoothing/: CMakeLists.txt  index.md  index.rst
src/Filtering/Thresholding/: CMakeLists.txt  index.md  index.rst
src/GPU/: index.md
src/IO/: CMakeLists.txt  index.md  index.rst
src/IO/DICOM/: index.rst
src/IO/GDCM/: CMakeLists.txt  index.md  index.rst
src/IO/ImageBase/: CMakeLists.txt  index.md  index.rst
src/IO/Mesh/: CMakeLists.txt  index.md  index.rst
src/IO/TIFF/: CMakeLists.txt  index.md  index.rst
src/IO/TransformBase/: CMakeLists.txt  index.md  index.rst
src/IO/TransformFactory/: CMakeLists.txt  index.md  index.rst
src/Nonunit/: CMakeLists.txt  index.md  index.rst
src/Nonunit/Review/: CMakeLists.txt  index.md  index.rst
src/Numerics/: CMakeLists.txt  index.md  index.rst
src/Numerics/Optimizers/: index.md  (+3 more)
src/Registration/: CMakeLists.txt  index.md  index.rst
src/Remote/: CMakeLists.txt  index.md  index.rst
src/Segmentation/: CMakeLists.txt  index.md  index.rst
src/Video/: CMakeLists.txt  index.md  index.rst
(+3522 files in other folders)
